--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <aside>
-      <textarea id="myTextArea"></textarea>
+      <div id="numdiv">
+        <label id="myLabel"></label>
+      </div>
+      <textarea id="myTextArea"> </textarea>
+
       <button id="myBtn">Submit</button>
     </aside>
     <main></main>
