--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Code Your Body</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="./img/logo.png" />
   </head>
   <body>
     <aside>
-      <div id="numdiv">
-        <label id="myLabel"></label>
+      <div id="wrapp">
+        <div id="numdiv">
+          <label id="myLabel"></label>
+        </div>
+        <textarea id="myTextArea"> </textarea>
       </div>
-      <textarea id="myTextArea"> </textarea>
 
       <button id="myBtn">Submit</button>
     </aside>
