--- a/index.html
+++ b/index.html
@@ -6,18 +6,28 @@
     <title>Code Your Body</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="./img/logo.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <aside>
-      <div id="wrapp">
-        <div id="numdiv">
-          <label id="myLabel"></label>
-        </div>
-        <textarea id="myTextArea"> </textarea>
+      <div id="title-wrapp">
+        <h1 id="main-title">Code Your Body</h1>
+        <div id="under-line"></div>
       </div>
-
-      <button id="myBtn">Submit</button>
+      <textarea id="myTextArea"> </textarea>
+      <div id="btn-wrapp">
+        <button id="myBtn">Submit</button>
+      </div>
     </aside>
+    <div id="img-wrap">
+      <img id="main-img" src="./img/item-removebg-preview (1).png" alt="" />
+    </div>
+
     <main></main>
     <script src="script.js"></script>
   </body>
