--- a/index.html
+++ b/index.html
@@ -12,8 +12,22 @@
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
       rel="stylesheet"
     />
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </head>
   <body>
+    <div class="hidden" id="popUp">
+      <h1 id="info-title">Jak na to</h1>
+      <button id="close-btn">
+        <ion-icon id="closeBtn" name="close-outline"></ion-icon>
+      </button>
+    </div>
     <aside>
       <div id="title-wrapp">
         <h1 id="main-title">Code Your Body</h1>
@@ -22,11 +36,11 @@
       <textarea id="myTextArea"> </textarea>
       <div id="btn-wrapp">
         <button id="myBtn">Submit</button>
+        <button id="help-btn">
+          <ion-icon id="help-icon" name="help-outline"></ion-icon>
+        </button>
       </div>
     </aside>
-    <div id="img-wrap">
-      <img id="main-img" src="./img/item-removebg-preview (1).png" alt="" />
-    </div>
 
     <main></main>
     <script src="script.js"></script>
